# OpenDuolingo

./: .gitignore  kana_list.py  learn_kana.py  main.py  main.ui  main_ui.py  pyproject.toml  style.py  test_challenges.json  winkana.py  winkana_ui.py
ui/: challenge.py  main.ui  main_ui.py  mode_select.ui  mode_select_ui.py  style.py
